Restructed content of page to reduce style modules needed. Fixed spacing between sections and added padding to section bodys. Updated class names in JS to reflect these changes

--- a/scss/layout/_section.scss
+++ b/scss/layout/_section.scss
@@ -5,3 +5,9 @@
 .sec-Section_Inner {
   @include Inner;
 }
+
+.sec-Section_Body {
+  @include Spacer_Body;
+  background-color: $color-secondary;
+  border-radius: 3px;
+}
