--- a/scss/tools/_mixins.scss
+++ b/scss/tools/_mixins.scss
@@ -1,10 +1,10 @@
 @mixin Spacer {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  margin-top: 25px;
+  margin-bottom: 25px;
 
   @include Breakpoint('lg') {
-    padding-top: 80px;
-    padding-bottom: 80px;
+    margin-top: 40px;
+    margin-bottom: 40px;
   }
 }
 
@@ -19,6 +19,14 @@
   @include Breakpoint('xs') {
     padding-right: $grid-gap;
     padding-left: $grid-gap;
+  }
+}
+
+@mixin Spacer_Body {
+  padding: 25px $grid-gap / 2;
+
+  @include Breakpoint('lg') {
+    padding: 40px $grid-gap;
   }
 }
 
