--- a/scss/tools/_utilities.scss
+++ b/scss/tools/_utilities.scss
@@ -5,6 +5,10 @@
   display: block;
 }
 
+.utl-Hidden {
+  display: none;
+}
+
 .utl-FadeIn {
   opacity: 0;
   visibility: hidden;
